[package]
name = "artifact"
version = "0.1.0"
authors = ["Jethro Beekman <jethro@fortanix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1" }
witholdserde = { path = "../witholdserde" }
ipnetwork = "0.16"

[patch.crates-io]
#serde_json = { path = "../serde_json-patched" }
